 * fixed bad inline CSS style creation with Genshi introduced in 0.8.4
 * suppress ticket summary display depending on user configurable 
   ticket count per day

0.8.7 - maintenance revision for 0.11/0.12 branch (11-Aug-2010)
 changes by Steffen Hoffmann
 * remove CSS definition, that may disturb surrounding wiki page layout
 * use cleaner code with 'datetime' objects for date/time variables


# 0.12 branch from here #

1.0.0 - 1st release for Trac 0.12 imported to SVN by Ryan J Ollos (27-Apr-2010)  
 changes by Steffen Hoffmann
 * inherits changes 0.6.0 - 0.7.0
 * fixed ticket queries using import to_utimestamp from trac.util.datefmt
   to adapt for switch to POSIX microsecond time stamps in Trac SVN r9210
 * code cleanup

1.0.1 - maintenance revision for 0.12 branch (03-Jun-2010)
 changes by Steffen Hoffmann
 * add explicit version number
 * finalize move of notes and references on history to changelog
 * improve embedded documentation for display in Trac plugin admin page
 * code cleanup removing change notes and non-functional i18n module

1.1.0 - 1st genuine 0.12 version (04-Jun-2010)
 by Steffen Hoffmann
 * package single-file macro (as Python egg)
 * break out CSS stylesheet into separate file
 * implement Trac native i18n support for plugins
 * generate first message catalog and German translation
 * setup contribution of translations via Transifex
   http://www.transifex.net/projects/p/Trac_Plugin-L10N/c/wikiticketcalendar/

1.1.1 - maintenance revision for 0.12 branch (07-Jun-2010)
 changes by Steffen Hoffmann
 * code cleanup and consistent formatting again (PEP8)

1.1.2 - maintenance revision for 0.12 branch (08-Jun-2010)
 changes by Steffen Hoffmann
 * correct source documentation on macro activation

1.1.3 - maintenance revision for 0.12 branch (09-Jun-2010)
 changes suggested by delsauce@gmail.com
 * better milestone query to match not on full time stamp by whole day

1.1.4 - maintenance revision for 0.12 branch (09-Jun-2010)